k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: app
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - api.nammer.store
      secretName: api-nammer-store-prod-tls

  rules:
    - host: api.nammer.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
